...
					prependElement={<Icon name='human-greeting-variant' color={'$primary'} />}
					placeholder='Username'
					value={username}
					style={
						IS_MAESTRO_BUILD ? { backgroundColor: '#000', color: '#000' } : undefined
					}
					testID='username_input'
					secureTextEntry={IS_MAESTRO_BUILD} // If Maestro build, don't show the username as screen Records
					onChangeText={(value: string | undefined) => setUsername(value)}
					autoCapitalize='none'
					autoCorrect={false}
					autoComplete='username'
					textContentType='username'
...
						<Spinner />
					) : (
						<Button
							marginVertical={0}
							disabled={_.isEmpty(username) || isPending}
							icon={() => <Icon name='chevron-right' small />}
							testID='sign_in_button'
							onPress={() => {
								if (!_.isUndefined(username)) {
									authenticateUserByName({ username, password })
								}
							}}
						>
...
