...
						onChangeText={setServerAddress}
						autoCapitalize='none'
						autoCorrect={false}
						secureTextEntry={IS_MAESTRO_BUILD} // If Maestro build, don't show the server address as screen Records
						flex={1}
						placeholder='demo.jellyfin.org/stable'
						testID='server_address_input'
						returnKeyType='go'
						onSubmitEditing={() => {
							if (!isUndefined(serverAddress))
								connectToServer({ serverAddress, useHttps })
						}}
					/>
...
					<Button
						disabled={isEmpty(serverAddress)}
						onPress={() => {
							if (!isUndefined(serverAddress))
								connectToServer({ serverAddress, useHttps })
						}}
						testID='connect_button'
					>
						Connect
					</Button>
				)}
			</YStack>
		</SafeAreaView>
...
