...
	onLibrarySelected,
	onCancel,
	primaryButtonText,
	primaryButtonIcon,
	cancelButtonText,
	cancelButtonIcon,
	title = 'Select Music Library',
	showCancelButton = true,
	isOnboarding = false,
}: LibrarySelectorProps): React.JSX.Element {
	const api = useApi()
	const [user] = useJellifyUser()
	const [library] = useJellifyLibrary()
...
					variant='outlined'
					borderColor={'$primary'}
					color={'$primary'}
					disabled={!selectedLibraryId}
					icon={() => <Icon name={primaryButtonIcon} small color='$primary' />}
					onPress={handleLibrarySelection}
					testID='let_s_go_button'
					flex={1}
				>
					{primaryButtonText}
				</Button>
			</XStack>
		</YStack>
...
