appId:  com.jellify
---
- launchApp
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    id: "server_address_input"
- inputText:  "${server_address}"
- hideKeyboard
- tapOn:
    id: "connect_button"
- assertVisible: "Sign in to Jellify"
- tapOn:
    id: "username_input"
- inputText: "${username}"
- hideKeyboard
- tapOn:
    id: "sign_in_button"
- assertVisible: "Select Music Library"
- tapOn:
    text: "Royalty Free Music"
- tapOn:
    id: "let_s_go_button"

